<resources>
    <string name="login_app_name">MyLogin</string>
    <string name="login_password">密码</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_username">账号</string>
    <string name="login_hint_username">输入账号</string>
    <string name="login_remenber_password">记住密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
</resources>