<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/login_head_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/login_et_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_password"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/login_et_password"
        app:layout_constraintRight_toLeftOf="@id/login_et_password" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_username"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/login_et_username"
        app:layout_constraintRight_toLeftOf="@+id/login_et_username" />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/login_hint_username"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/login_et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <CheckBox
        android:id="@+id/login_remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/login_remenber_password"
        app:layout_constraintLeft_toLeftOf="@+id/login_et_password"
        app:layout_constraintTop_toBottomOf="@+id/login_et_password" />

    <ImageButton
        android:id="@+id/login_password_visible"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="15dp"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintBottom_toBottomOf="@id/login_et_password"
        app:layout_constraintLeft_toRightOf="@id/login_et_password" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_login"
        app:layout_constraintLeft_toLeftOf="@id/login_et_password"
        app:layout_constraintTop_toBottomOf="@id/login_et_password" />

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_register"
        app:layout_constraintRight_toRightOf="@id/login_et_password"
        app:layout_constraintTop_toBottomOf="@id/login_et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>